--- a/style.css
+++ b/style.css
@@ -7,17 +7,16 @@
 }
 .container{
     flex-direction: column;
-    width: 60%;
+    width: 80%;
     display: flex;
 }
 .section1{
-    /* background-color: bisque; */
-    padding: 20px 30px;
+    
+    padding: 5% 6%;
     display: flex;
     flex-direction: row;
 }
 .section1-1{
-    padding: 25px;
     width: 50%;
     margin-top: 50px;
     justify-content: center;
@@ -31,8 +30,15 @@
     padding: 10px;
 }
 .section1-2{
-    padding: 10px;
+    padding: 2%;
     justify-content: center;
+    width: 38%;
+}
+.responsive{
+    width: 100%;
+    max-width: 1000px;
+    height: 100%;
+    max-height: 10000px;
 }
 .section2{
         background-image: url("images/shapes/7.png");  
@@ -41,59 +47,65 @@
         background-color: rgba(255, 235, 205, 0.575);
         flex-direction: row;
         display: flex;  
-        margin-bottom: 0px;     
+        margin-bottom: 0px;   
+        
 }
 .section2-1{
-        padding-top: 70px;
-        padding-left: 120px;
+        padding-top: 10%;
+        padding-left: 15%;
         justify-content: center;
-        width: 45%;
+        width: 50%;
 }
+.responsive1{
+    width: 100%;
+  max-width: 220px;
+
+  height: 100%;
+  max-height: 10000px;
+  }
 .section2-2{
-    padding-top: 80px;
-    padding-left: 10px;
+    width: 50%;
+    padding-top: 10%;
+    padding-left: 5%px;
 }
 
 .section3{
     margin-top: 50px;
-    padding-left: 150px;
-    padding-right: 150px;
-    text-align: center;
+    padding: 0% 15%;
+    text-align: justify;
     
 }
+.a{
+    text-align: center;
+}
 .section4{
-    /* background-color: bisque; */
-    padding: 20px 60px;
+    margin: 30px 6%;
     display: flex;
     flex-direction: row;
     position: relative;
     
 }
-
+.photo{
+    background-color: white;
+    padding: 1%;
+    width: 30%;
+    box-shadow:2px 5px 5px 10px #888888;
+    border-radius: 10px;
+}
 .section5{
-    margin: 50px 50px;
-    /* background-color: bisque; */
-    padding: 20px 40px;
+    margin: 50px 6%;
     display: flex;
     flex-direction: row;
     position: relative;
     box-shadow:2px 5px 5px 10px #dad6d6;
 }
-
-.photo{
-    background-color: white;
-    padding: 10px;
-    width: 30%;
-    box-shadow:2px 5px 5px 10px #888888;
-    border-radius: 10px;
-}
 .social-follower{
-    background-color: white;
+    /* background-color: white; */
     padding-top: 40px;
     padding-bottom: 40px;
     width: 33.3%;
     text-align: center;
-    padding-left:10px;
+    /* padding-left:10px; */
 }
 .section6{
 background-color: black;
@@ -113,6 +125,7 @@ margin: 0px;
 
 .food-p{
     margin-bottom: 15px;
+    text-align: justify;
 }
 .span-color{
     color: rgb(216, 87, 12);
@@ -128,7 +141,7 @@ margin: 0px;
     margin-top: 15px;
     margin-bottom: 20px;
     font-size:20px;
-    width: 250px;
+    width:70%;
     justify-content: left;
 }
 
