--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     font-size: 20px;
     border-radius: 15px;
     padding: 10px;
+    margin-bottom: 10px;
 }
 .section1-2{
     padding-top: 1.5%;
