--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@
     color: black;
     font-weight: 600;
     font-size: 20px;
-    border-radius: 15px;
-    padding: 10px;
+    border-radius: 10%;
+    padding: 2%;
     margin-bottom: 10px;
 }
 .section1-2{
@@ -68,7 +68,7 @@
 .section2-2{
     width: 50%;
     padding-top: 10%;
-    padding-left: 5%px;
+    padding-left: 5%;
     margin-bottom: 5%;
 }
 }
